# mcp-google-sheets

./: Dockerfile  README.md  docker-compose.yml  guide.md  pyproject.toml  server.py  test.py
src/mcp_google_sheets/: server.py
