[project]
name = "mcp-google-sheets"
version = "0.1.0"
description = "This MCP server integrates with your single Google Sheets, to enable creating and modifying spreadsheets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.8.0",
    "google-auth>=2.28.1",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.117.0",
    "fastmcp>=3.0.2",
    "gspread>=6.2.1",
    "termcolor>=3.3.0",
]
